--- a/src/css/App.css
+++ b/src/css/App.css
@@ -42,3 +42,9 @@ footer p {
 #description{
     color: black;
 }
+.searc-box{
+    padding: 10px;
+    width: 500px;
+    position: relative;
+    left: 30%;
+}
