--- a/src/css/App.css
+++ b/src/css/App.css
@@ -34,11 +34,20 @@ footer p {
     left: 45%;
 }
 #cards{
-    background-color: white;
+    background-color: rgba(0, 238, 255, 0.377);
 }   
 #title{
     color: black;
 }
 #description{
     color: black;
+}
+.searc-box{
+    padding: 10px;
+    width: 500px;
+    position: relative;
+    left: 30%;
+}
+#subtitle{
+    color: black !important;
 }
